update dependencies, add multibuild task, reduce concurrent build tasks to 2 as not more are needed